fix(assessment): finalize assessment styling, margin spacing, and routing tweaks

--- a/client/src/components/features/assessment/AssessmentContent.css
+++ b/client/src/components/features/assessment/AssessmentContent.css
@@ -326,10 +326,12 @@
 .ass-input[type="number"]::-webkit-inner-spin-button,
 .ass-input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 .ass-input[type="number"] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .ass-submit-btn {
